Remove calls to constructors and methods that aren't available until Java 5.